--- a/_posts/2018-03-30-recruit.md
+++ b/_posts/2018-03-30-recruit.md
@@ -3,13 +3,13 @@ layout: post
 title: 3D打印创新团队成员招募（2018春）
 categories: Recruit
 description: 第一次招募啦！
-keywords: Recruit,The First Time
+keywords: Recruit, The First Time
 ---
 
 2018年3月，3D打印创新团队成立了！！！
 
 
-我们的团队由山东大学吕琳副教授带领，是一支致力于提供3D打印设计与制造解决方案的创新创业团队。依托于山东大学3D打印与增材制造资源，我们的团队面向客户需求提供包括3D打印设计与制造的一体化解决方案。近两年，我们的团队已经申请3D打印与增材制造领域专利多项，已投顶级会议或期刊论文若干篇。
+我们的团队由山东大学[吕琳副教授][1]带领，是一支致力于提供3D打印设计与制造解决方案的创新创业团队。依托于山东大学3D打印与增材制造资源，我们的团队面向客户需求提供包括3D打印设计与制造的一体化解决方案。近两年，我们的团队已经申请3D打印与增材制造领域专利多项，已投顶级会议或期刊论文若干篇。
 
 为实现项目成果转化，技术落地等目标，在此招募对3D打印与增材制造感兴趣的，有实力的小伙伴加入我们的团队。
 
@@ -40,3 +40,5 @@ keywords: Recruit,The First Time
 * 有一定美术功底，能够使用Photoshop、maya、3Dmax等软件者优先
 
 有意向加入我们的小伙伴请将自己的个人简历发送至 3dincrement@gmail.com
+
+[1]: http://www.cs.sdu.edu.cn/zh/~llu
