--- a/_posts/2018-03-30-recruit.md
+++ b/_posts/2018-03-30-recruit.md
@@ -17,13 +17,13 @@ keywords: Recruit, The First Time
 
 加入我们的团队，你可以获得：
 
-* 丰富的项目经历 加入我们的团队，你可以全流程参与我们的项目。充分了解项目构建、测试、运行、维护等方面的知识。锻炼编程技能，为以后工作打下坚实基础。
+* __丰富的项目经历__ 加入我们的团队，你可以全流程参与我们的项目。充分了解项目构建、测试、运行、维护等方面的知识。锻炼编程技能，为以后工作打下坚实基础。
 
-* 研究生学长学姐的指导 加入我们的团队，你可以获得研(piao)究(liang)生(de)学(xiao)长(jie)学(jie)姐的指导，传授成功的大学经验，帮你进行未来的学业or 工作规划。
+* __研究生学长学姐的指导__ 加入我们的团队，你可以获得研(piao)究(liang)生(de)学(xiao)长(jie)学(jie)姐的指导，传授成功的大学经验，帮你进行未来的学业or 工作规划。
 
-* 创新创业比赛经历 加入我们的团队我们会定期组织团队成员参与诸如创青春、互联网+、英特尔杯等创新创业比赛，团队成员都可以获得丰富的比赛经历，甚至争取到保研资格。
+* __创新创业比赛经历__ 加入我们的团队我们会定期组织团队成员参与诸如创青春、互联网+、英特尔杯等创新创业比赛，团队成员都可以获得丰富的比赛经历，甚至争取到保研资格。
 
-* 科研助手与保研 我们的团队与计算机学院交叉研究中心（IRC）有密切的联系，IRC是国内顶级的图形学研究实验室。优秀的团队成员可以以科研助手的身份加入IRC，在未来的保研过程中优先录取。
+* __科研助手与保研__ 我们的团队与计算机学院交叉研究中心（IRC）有密切的联系，IRC是国内顶级的图形学研究实验室。优秀的团队成员可以以科研助手的身份加入IRC，在未来的保研过程中优先录取。
 
 ## 我们要求什么？
 
